--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+:root {
+--bitcoin-orange: #f7931a;
+--soft-orange: #ffe9d5;
+--secondary-blue: #1a9af7;
+--soft-blue: #e7f5ff;
+--warm-black: #282623;
+--black: #201e1c;
+--grey: #bababa;
+--off-white: #faf8f7;
+--just-white: #fff;
+}
 *{
     box-sizing: border-box;
     margin: 0;
@@ -28,8 +39,22 @@ header img {
     width: 90%;
     min-width: 288px;
     max-width: 900px;
-    height: 218px;
-    margin-top: 40px;
+    height: 140px;
+    margin-top: 30px;
     text-align: center;
     align-self: center;
+}
+.header--title-container h1 {
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+
+}
+.header--title-container p {
+    margin-top: 25px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: var(--soft-orange);
 }
