--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ header img {
     width: 90%;
     min-width: 288px;
     max-width: 900px;
-    height: 140px;
+    height: 218px;
     margin-top: 30px;
     text-align: center;
     align-self: center;
@@ -57,4 +57,30 @@ header img {
     font-weight: 500;
     line-height: 1.8rem;
     color: var(--soft-orange);
+}
+.header--button{
+    position: absolute;
+    left: calc(50% - 118px);
+    top: 270px;
+    display: block;
+    margin-top: 35px;
+    padding: 15px;
+    width: 229px;
+    height: 48px;
+    background-color: var(--off-white);
+    /*Sombra*/
+    box-shadow: 0px 4px 8px rgba(89, 73, 30, 0.16);
+    border: none;
+    border-radius: 5px;
+    font-size: 1.4rem;
+    font-weight: bold;
+    text-decoration: none;
+    color: var(--black);
+}
+.header--button span {
+    display: inline-block;
+    width: 13px;
+    height: 8px;
+    margin-left: 10px;
+    background-image: url('./assets/icons/down-arrow.svg');
 }
