--- a/style.css
+++ b/style.css
@@ -184,7 +184,8 @@ main{
 ..commission-table--container .table__bottom-right {
     border-radius: 0 0 15px 0;
 }
-.currency-table--container .table__right {
+.currency-table--container .table__right,
+.commissions-table--container .table__right {
     font-size: 1.4rem;
     font-weight: normal;
     line-height: 1.7rem;
@@ -203,4 +204,23 @@ main{
 }
 .currency-table--container .up {
     background-image: url('./assets/icons/trending-up.svg');
+}
+.currency-table--date,
+.commissions-table--date {
+    width: 190px;
+    height: 30px;
+    margin: 0 auto;
+    margin-top: 15px;
+    padding: 8px;
+    background-color: var(--soft-orange);
+    border-radius: 8px;
+}
+.commissions-table--date {
+    background-color: var(--soft-blue);
+}
+.currency-table--date p,
+.commissions-table--date p {
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+    color: var(--warm-black);
 }
