--- a/style.css
+++ b/style.css
@@ -314,3 +314,156 @@ main{
     line-height: 1.8rem;
     color: #808080;
 }
+.bitcoin-img-container {
+    width: 100%;
+    min-height: 320px;
+    height: 50vh;
+    background-image: url('./assets/imgs/bitcoinbaby2x.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    text-align: center;
+}
+.bitcoin-img-container h2 {
+    padding-top: 60px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+}.main-plans-container {
+    width: 100%;
+    min-width: 320px;
+    padding-bottom: 70px;
+    text-align: center;
+}
+.plans--title {
+    width: 90%;
+    min-width: 288px;
+    height: auto;
+    margin: 0 auto;
+    margin-bottom: 50px;
+}
+.plans--title h2 {
+    padding-top: 50px;
+    font-size: 1.4rem;
+    font-weight: bold;
+    color: var(--black)
+}
+.plans--title p {
+    padding-top: 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #757575;
+}
+.plans-container--slider {
+    display: flex;
+    height: 316px;
+    overflow-x: scroll;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: x proximity;
+}
+.plans-container--card,
+.plans-container--card2 {
+    position: relative;
+    scroll-snap-align: center;
+    width: 70%;
+    min-width: 230px;
+    max-width: 300px;
+    height: 250px;
+    margin: 50px 20px 0;
+    padding: 0 15px;
+    background-color: var(--just-white);
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(89, 73,30, 0.16);
+}
+.plans-container--card2 {
+    background-color: var(--warm-black);
+}
+.recommend,
+.basic {
+    position: absolute;
+    width: 120px;
+    height: 31px;
+    padding: 6px;
+    left: calc(50% - 60px);
+    top: -15px;
+    font-size: 1.2rem;
+    background-color: var(--bitcoin-orange);
+    border-radius: 8px;
+    color: var(--just-white);
+}
+.basic {
+    background-color: var(--secondary-blue);
+}
+.Unlimited {
+    position: absolute;
+    width: 120px;
+    height: 31px;
+    padding: 6px;
+    left: calc(50% - 60px);
+    top: -15px;
+    font-size: 1.2rem;
+    background-color: var(--grey);
+    border-radius: 8px;
+    color: var(--warm-black);
+}
+.plan-card--tittle,
+.plan-card--tittle2 {
+    padding-top: 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: black;
+}
+.plan-card--tittle2 {
+    color:var(--just-white)
+}
+.plan-card--price,
+.plan-card--price2 {
+    padding: 5px 0;
+    font-size: 5.2rem;
+    font-weight: bold;
+    line-height: 6.3rem;
+    color: black;
+}
+.plan-card--price2 {
+color: var(--just-white);
+}
+.plan-card--price span,
+.plan-card--price2 span {
+    font-size: 1.2rem;
+    font-weight: 300;
+    vertical-align: text-top;
+}
+.plan-card-saving,
+.plan-card-saving2 {
+    font-size: 1.2rem;
+    color: #757575;
+}
+.plan-card--ca,
+.plan-card--ca2 {
+    width: 150px;
+    height: 48px;
+    margin-top: 20px;
+    background-color:#faf8f7;
+    border: 2px solid var(--bitcoin-orange);
+    font-family: "DM Sans", sans-serif;
+    border-radius: 4px;
+    font-size: 1.4rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    color: var(--black)
+}
+.plan-card--ca2 {
+    background-color: var(--warm-black);
+    color: var(--just-white);
+}
+.plan-card--ca span,
+.plan-card--ca2 span {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-image: url('./assets/icons/orange-right-arrow.svg');
+    vertical-align: text-bottom;
+}
